created endpoint for creating comment, issues with edit and delete
